<resources>
    <string name="app_name">EchoDiary</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="diary">Diary</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="summarization_style">Summarization Style</string>
    <string name="mood_detection">Mood Detection</string>
    <string name="entry_language">Entry Language</string>
    <string name="daily_reminder_time">Daily Reminder Time</string>
    <string name="voice_control">Voice Control</string>
    <string name="theme">Theme</string>
    <string name="about_echodiary">About EchoDiary</string>
    <string name="app_qoute">Live Your Day, Keep your Story</string>


    <string-array name="summarization_styles">
        <item>Formal</item>
        <item>Casual</item>
        <item>Concise</item>
    </string-array>

    <string-array name="language_options">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
    </string-array>

    <string-array name="font_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>

    <string-array name="mood_options">
        <item>Happy</item>
        <item>Sad</item>
        <item>Neutral</item>
    </string-array>

    <string name="about_message">EchoDiary v1.0\nDeveloped by Bigo143\nAll rights reserved.</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="ok">Ok</string>

    <string name="english">English</string>
    <string name="filipino">Filipino</string>
    <string name="japanese">Japanese</string>
    <string name="create">Create</string>
    <string name="upload_a_video">Upload a video</string>
    <string name="create_a_short">Create a short</string>
    <string name="go_live">Go live</string>
    <string name="applying_language">Applying language...</string>
    <string name="daytrace">DayTrace</string>
    <string name="applying_theme">Applying Theme.....</string>


</resources>
