<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/nav_bar_home"/>

    <item
        android:id="@+id/calendar"
        android:title="@string/calendar"
        android:icon="@drawable/nav_bar_calendar_month"
        />

    <item
        android:title=""
        android:enabled="false"
        android:checkable="false"
        android:icon="@android:color/transparent"
        android:visible="true"/>


    <item
        android:id="@+id/subscriptions"
        android:title="@string/empty"
        android:icon="@drawable/baseline_subscriptions_24" />
    <item
        android:id="@+id/library"
        android:title="@string/more"
        android:icon="@drawable/nav_var_more_vert" />

</menu>